[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-cleaning-env"
version = "0.1.0"
description = "An OpenEnv-compliant environment where an AI agent cleans messy CSV datasets step by step."
authors = [
    { name = "Yashwanth", email = "yup29-pro@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.openenv]
entrypoints = [
    "inference.py",
    "environment.py",
    "tasks.py"
]
multi_mode = true
